--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "fiact",
   "version": "0.0.1",
+  "types": "@types/index.d.ts",
   "description": "run fibjs by react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "fib-typify src -o lib",
+    "test": "fibjs test",
+    "ci": "npm run build && npm run test",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,23 @@
   "bugs": {
     "url": "https://github.com/fiact/fiactjs/issues"
   },
-  "homepage": "https://github.com/fiact/fiactjs#readme"
+  "ci": {
+    "type": "travis, appveyor",
+    "version": [
+      "0.21.0",
+      "0.22.0",
+      "0.23.0",
+      "0.24.0",
+      "0.25.0",
+      "0.26.0",
+      "0.26.1"
+    ]
+  },
+  "homepage": "https://github.com/fiact/fiactjs#readme",
+  "devDependencies": {
+    "@fibjs/ci": "^2.1.0",
+    "@types/fibjs": "^0.26.5",
+    "fib-typify": "^0.5.2",
+    "react": "^16.8.3"
+  }
 }
