--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fiact",
+  "name": "@fiact/sandbox",
   "version": "0.0.1",
   "types": "@types/index.d.ts",
-  "description": "run fibjs by react",
-  "main": "index.js",
+  "description": "sandbox for it",
+  "main": "lib",
   "scripts": {
     "build": "fib-typify src -o lib",
     "test": "fibjs test",
@@ -31,7 +31,16 @@
   "homepage": "https://github.com/fiact/fiactjs#readme",
   "devDependencies": {
     "@fibjs/ci": "^2.3.0",
-    "fib-typify": "^0.5.2",
+    "@fibjs/types": "^0.28.0",
+    "@types/fibjs": "^0.26.5",
     "react": "^16.9.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/standalone": "^7.6.0",
+    "@fibjs/builtin-modules": "^0.1.0",
+    "@types/react-reconciler": "^0.18.0",
+    "react-reconciler": "^0.21.0"
   }
 }
