--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,12 +1,10 @@
 {
     "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
         "noImplicitAny": false,
         "noImplicitUseStrict": true,
-        "lib": [
-            "es6",
-            "es2015",
-            "es2016"
-        ],
+        "jsx": "react",
         "typeRoots": [
             "@types",
             "node_modules"
