--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
     "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
         "noImplicitAny": false,
+        "alwaysStrict": true,
         "noImplicitUseStrict": true,
         "lib": [
             "es6",
             "es2015",
             "es2016"
-        ]
+        ],
+        "jsx": "react"
     }
 }
